Correcting how non-RDF sources are posted in tests.